--- a/languages/wc1c-ru_RU.po
+++ b/languages/wc1c-ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WC1C > integration of WooCommerce with 1C products "
 "(different configurations)\n"
 "POT-Creation-Date: 2020-05-16 14:10+0300\n"
-"PO-Revision-Date: 2020-05-16 14:22+0300\n"
+"PO-Revision-Date: 2020-05-16 15:24+0300\n"
 "Last-Translator: \n"
 "Language-Team: https://wc1c.info\n"
 "Language: ru_RU\n"
@@ -592,7 +592,7 @@ msgstr "Черновик"
 
 #: includes/admin/configurations/class-wc1c-admin-configurations-table.php:70
 msgid "Active"
-msgstr "Работает"
+msgstr "Включена"
 
 #: includes/admin/configurations/class-wc1c-admin-configurations-table.php:74
 msgid "Inactive"
