Replace: Reports to Environments

--- a/languages/wc1c-ru_RU.po
+++ b/languages/wc1c-ru_RU.po
@@ -918,7 +918,7 @@ msgstr ""
 msgid ""
 "Can enable logging, specify the level of error that to benefit from "
 "logging.\n"
-"\t\t\t Can send reports to developer. All sensitive data in the report are "
+"\t\t\t Can send environments to developer. All sensitive data in the report are "
 "deleted.\n"
 "\t\t\t  By default, the error rate should not be less than ERROR."
 msgstr ""
