Update: language files

--- a/assets/languages/wc1c-ru_RU.po
+++ b/assets/languages/wc1c-ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WC1C > integration of WooCommerce with 1C products "
 "(different configurations)\n"
 "POT-Creation-Date: 2022-02-20 11:51+0300\n"
-"PO-Revision-Date: 2022-02-20 11:52+0300\n"
+"PO-Revision-Date: 2022-02-20 14:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: https://wc1c.info\n"
 "Language: ru_RU\n"
@@ -1376,7 +1376,7 @@ msgstr "Продукты (товары): цены"
 
 #: src/Schemas/Productscml/Admin.php:499
 msgid "Comparison of WooCommerce and 1C prices and other settings."
-msgstr "Спосоставление цен WooCommerce и 1С и другие настроек."
+msgstr "Сопосоставление цен WooCommerce и 1С и другие настройки."
 
 #: src/Schemas/Productscml/Admin.php:504
 msgid "Base price - first found"
