Update: language files

--- a/assets/languages/wc1c-ru_RU.po
+++ b/assets/languages/wc1c-ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WC1C > integration of WooCommerce with 1C products "
 "(different configurations)\n"
 "POT-Creation-Date: 2022-06-20 01:57+0300\n"
-"PO-Revision-Date: 2022-06-20 02:00+0300\n"
+"PO-Revision-Date: 2022-06-20 02:02+0300\n"
 "Last-Translator: \n"
 "Language-Team: https://wc1c.info\n"
 "Language: ru_RU\n"
@@ -549,7 +549,7 @@ msgid ""
 "individual features, users, and roles. If disabled, features will be "
 "disabled globally for everyone and everything."
 msgstr ""
-"Если модификация интерфейса включена, можно изменить настройки н уровне "
+"Если модификация интерфейса включена, можно изменить настройки на уровне "
 "отдельных функций, пользователей и ролей. Если модификация отключена, "
 "функции будут отключены глобально для всех и всего."
 
